Shop Responsive progress

--- a/src/content/pages/shop.njk
+++ b/src/content/pages/shop.njk
@@ -14,222 +14,48 @@ permalink: /shop.html
         </div>
         <div class="shop__container">
             <div class="shop__content">
-                <ul class="shop__list">
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card middle">
-                            <p class="shop__title">Hoodie</p>
-                            <ul class="shop__sizes">
-                                <li class="shop__size">XS</li>
-                                <li class="shop__size">S</li>
-                                <li class="shop__size">M</li>
-                                <li class="shop__size">L</li>
-                                <li class="shop__size">XL</li>
-                                <li class="shop__size">XXL</li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                </ul>
-                <ul class="shop__list invert">
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card middle">
-                            <p class="shop__title">Hoodie</p>
-                            <ul class="shop__sizes">
-                                <li class="shop__size">XS</li>
-                                <li class="shop__size">S</li>
-                                <li class="shop__size">M</li>
-                                <li class="shop__size">L</li>
-                                <li class="shop__size">XL</li>
-                                <li class="shop__size">XXL</li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                </ul>
-                <ul class="shop__list">
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card middle">
-                            <p class="shop__title">Hoodie</p>
-                            <ul class="shop__sizes">
-                                <li class="shop__size">XS</li>
-                                <li class="shop__size">S</li>
-                                <li class="shop__size">M</li>
-                                <li class="shop__size">L</li>
-                                <li class="shop__size">XL</li>
-                                <li class="shop__size">XXL</li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                </ul>
-                <ul class="shop__list invert">
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card middle">
-                            <p class="shop__title">Hoodie</p>
-                            <ul class="shop__sizes">
-                                <li class="shop__size">XS</li>
-                                <li class="shop__size">S</li>
-                                <li class="shop__size">M</li>
-                                <li class="shop__size">L</li>
-                                <li class="shop__size">XL</li>
-                                <li class="shop__size">XXL</li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                </ul>
-                <ul class="shop__list">
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card middle">
-                            <p class="shop__title">Hoodie</p>
-                            <ul class="shop__sizes">
-                                <li class="shop__size">XS</li>
-                                <li class="shop__size">S</li>
-                                <li class="shop__size">M</li>
-                                <li class="shop__size">L</li>
-                                <li class="shop__size">XL</li>
-                                <li class="shop__size">XXL</li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                </ul>
-                <ul class="shop__list invert">
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card middle">
-                            <p class="shop__title">Hoodie</p>
-                            <ul class="shop__sizes">
-                                <li class="shop__size">XS</li>
-                                <li class="shop__size">S</li>
-                                <li class="shop__size">M</li>
-                                <li class="shop__size">L</li>
-                                <li class="shop__size">XL</li>
-                                <li class="shop__size">XXL</li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                </ul>
-                <ul class="shop__list">
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card middle">
-                            <p class="shop__title">Hoodie</p>
-                            <ul class="shop__sizes">
-                                <li class="shop__size">XS</li>
-                                <li class="shop__size">S</li>
-                                <li class="shop__size">M</li>
-                                <li class="shop__size">L</li>
-                                <li class="shop__size">XL</li>
-                                <li class="shop__size">XXL</li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                </ul>
-                <ul class="shop__list invert">
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card middle">
-                            <p class="shop__title">Hoodie</p>
-                            <ul class="shop__sizes">
-                                <li class="shop__size">XS</li>
-                                <li class="shop__size">S</li>
-                                <li class="shop__size">M</li>
-                                <li class="shop__size">L</li>
-                                <li class="shop__size">XL</li>
-                                <li class="shop__size">XXL</li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                    <li class="shop__item">
-                        <div class="shop__card"></div>
-                    </li>
-                </ul>
+                <div class="shop__list invert">
+                    <div class="shop__card"></div>
+                    <div class="shop__card"></div>
+                    <div class="shop__card middle"></div>
+                    <div class="shop__card"></div>
+                    <div class="shop__card"></div>
+                </div>
+                <div class="shop__list">
+                    <div class="shop__card"></div>
+                    <div class="shop__card"></div>
+                    <div class="shop__card middle"></div>
+                    <div class="shop__card"></div>
+                    <div class="shop__card"></div>
+                </div>
+                <div class="shop__list invert">
+                    <div class="shop__card"></div>
+                    <div class="shop__card"></div>
+                    <div class="shop__card middle"></div>
+                    <div class="shop__card"></div>
+                    <div class="shop__card"></div>
+                </div>
+                <div class="shop__list">
+                    <div class="shop__card"></div>
+                    <div class="shop__card"></div>
+                    <div class="shop__card middle"></div>
+                    <div class="shop__card"></div>
+                    <div class="shop__card"></div>
+                </div>
+                <div class="shop__list invert">
+                    <div class="shop__card"></div>
+                    <div class="shop__card"></div>
+                    <div class="shop__card middle"></div>
+                    <div class="shop__card"></div>
+                    <div class="shop__card"></div>
+                </div>
+                <div class="shop__list">
+                    <div class="shop__card"></div>
+                    <div class="shop__card"></div>
+                    <div class="shop__card middle"></div>
+                    <div class="shop__card"></div>
+                    <div class="shop__card"></div>
+                </div>
             </div>
         </div>
     </div>
