--- a/src/assets/scss/page/shop.scss
+++ b/src/assets/scss/page/shop.scss
@@ -12,20 +12,20 @@
 }
 
 .shop__list {
-    
+
     list-style: none;
     
     display: flex;
-    flex-direction: row;
-    
+    flex-direction: row;    
     gap: 12px;
+
+    position: relative;
 
     animation-timeline: view(block);
     animation-name: slideTest;
-    animation-range: -10% 200%;
+    animation-range: cover;
     animation-fill-mode: both;
     animation-duration: 1ms; /* Firefox requires this to apply the animation */
-
 }
 
 .invert {
@@ -36,7 +36,7 @@
 
 .shop__card {
 
-    width: 200px;
+    width: 500px;
     height: 200px;
 
     background-color: var(--color-green-300);
@@ -237,7 +237,7 @@
         }
 
         1% {
-            transform: translate(0, -60%);
+            transform: translate(0, -55%);
         }
 
         100% {
@@ -255,7 +255,7 @@
         }
 
         100% {
-            transform: translate(0, -60%);
+            transform: translate(0, -55%);
         }
     }
 
