--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -59,7 +59,7 @@ permalink: /index.html
         </div>
         <div class="s-section__content cardsection reverse slideFromBottom">
             <div class="cardsection__content">
-                <h2 class="cardsection__title">We focus on the Quality</h2>
+                <h2 class="cardsection__title">Focus on the Quality</h2>
                 <p class="cardsection__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. <br> <br> Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo.</p>
             </div>
             <div class="cardsection__img"></div>
@@ -76,15 +76,39 @@ permalink: /index.html
         <div class="s-section__number">
             <p>02</p>
         </div>
-        <div class="s-section__content">
+        <div class="s-section__content shopsection">
             <h1 class="s-section__title">
                 Shop
             </h1>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos. <br> <br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum adipisci quod illum aliquam quos voluptate, voluptas delectus nobis non, dolores officiis consequuntur obcaecati veritatis assumenda, voluptatibus architecto incidunt. Sequi, aliquid. <br> <br>
-            <div class="parallax__container">
-                <div class="parallax__animation__left">PARALLAX</div>
-            </div>
+            <div class="shopsection__content">
+                <h2 class="shopsection__title">Our Selection</h2>
+                <p class="shopsection__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br><br> Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br><br> Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. 
+                </p>
+            </div>  
+            <div class="shopsection__preview">
+                <ul class="shopsection__list">
+                    <li class="shopsection__item">
+                        <div class="shopsection__item__label">
+                            <p>Latest</p>
+                        </div>
+                    </li>
+                    <li class="shopsection__item">
+                        <div class="shopsection__item__label">
+                            <p>Most Popular</p>
+                        </div>
+                    </li>
+                    <li class="shopsection__item">
+                        <div class="shopsection__item__label">
+                            <p>Our Choice</p>
+                        </div>
+                    </li>
+                    <li class="shopsection__item">
+                        <div class="shopsection__item">
+                        </div>
+                    </li>
+                </ul>
+            </div>  
         </div>
     </div>
 
