--- a/src/content/pages/shop.njk
+++ b/src/content/pages/shop.njk
@@ -15,46 +15,106 @@ permalink: /shop.html
         <div class="shop__container">
             <div class="shop__content">
                 <div class="shop__list invert">
-                    <div class="shop__card"></div>
-                    <div class="shop__card"></div>
-                    <div class="shop__card middle"></div>
-                    <div class="shop__card"></div>
-                    <div class="shop__card"></div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item middle">
+                        <h2 class="shopItem__title">Hoodie</h2>
+                        <a href="" class="shopItem__more"><img class="o-fluidimg" src="../assets/img/Mate_Star.svg" alt=""></a>
+                        <ul class="shopItem__sizes">
+                            <li class="shopItem__size">XS</li>
+                            <li class="shopItem__size">S</li>
+                            <li class="shopItem__size">M</li>
+                            <li class="shopItem__size">L</li>
+                            <li class="shopItem__size">XL</li>
+                        </ul>
+                    </div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item"></div>
                 </div>
                 <div class="shop__list">
-                    <div class="shop__card"></div>
-                    <div class="shop__card"></div>
-                    <div class="shop__card middle"></div>
-                    <div class="shop__card"></div>
-                    <div class="shop__card"></div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item middle">
+                        <h2 class="shopItem__title">Hoodie</h2>
+                        <a href="" class="shopItem__more"><img class="o-fluidimg" src="../assets/img/Mate_Star.svg" alt=""></a>
+                        <ul class="shopItem__sizes">
+                            <li class="shopItem__size">XS</li>
+                            <li class="shopItem__size">S</li>
+                            <li class="shopItem__size">M</li>
+                            <li class="shopItem__size">L</li>
+                            <li class="shopItem__size">XL</li>
+                        </ul>
+                    </div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item"></div>
                 </div>
                 <div class="shop__list invert">
-                    <div class="shop__card"></div>
-                    <div class="shop__card"></div>
-                    <div class="shop__card middle"></div>
-                    <div class="shop__card"></div>
-                    <div class="shop__card"></div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item middle">
+                        <h2 class="shopItem__title">Hoodie</h2>
+                        <a href="" class="shopItem__more"><img class="o-fluidimg" src="../assets/img/Mate_Star.svg" alt=""></a>
+                        <ul class="shopItem__sizes">
+                            <li class="shopItem__size">XS</li>
+                            <li class="shopItem__size">S</li>
+                            <li class="shopItem__size">M</li>
+                            <li class="shopItem__size">L</li>
+                            <li class="shopItem__size">XL</li>
+                        </ul>
+                    </div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item"></div>
                 </div>
                 <div class="shop__list">
-                    <div class="shop__card"></div>
-                    <div class="shop__card"></div>
-                    <div class="shop__card middle"></div>
-                    <div class="shop__card"></div>
-                    <div class="shop__card"></div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item middle">
+                        <h2 class="shopItem__title">Hoodie</h2>
+                        <a href="" class="shopItem__more"><img class="o-fluidimg" src="../assets/img/Mate_Star.svg" alt=""></a>
+                        <ul class="shopItem__sizes">
+                            <li class="shopItem__size">XS</li>
+                            <li class="shopItem__size">S</li>
+                            <li class="shopItem__size">M</li>
+                            <li class="shopItem__size">L</li>
+                            <li class="shopItem__size">XL</li>
+                        </ul>
+                    </div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item"></div>
                 </div>
                 <div class="shop__list invert">
-                    <div class="shop__card"></div>
-                    <div class="shop__card"></div>
-                    <div class="shop__card middle"></div>
-                    <div class="shop__card"></div>
-                    <div class="shop__card"></div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item middle">
+                        <h2 class="shopItem__title">Hoodie</h2>
+                        <a href="" class="shopItem__more"><img class="o-fluidimg" src="../assets/img/Mate_Star.svg" alt=""></a>
+                        <ul class="shopItem__sizes">
+                            <li class="shopItem__size">XS</li>
+                            <li class="shopItem__size">S</li>
+                            <li class="shopItem__size">M</li>
+                            <li class="shopItem__size">L</li>
+                            <li class="shopItem__size">XL</li>
+                        </ul>
+                    </div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item"></div>
                 </div>
                 <div class="shop__list">
-                    <div class="shop__card"></div>
-                    <div class="shop__card"></div>
-                    <div class="shop__card middle"></div>
-                    <div class="shop__card"></div>
-                    <div class="shop__card"></div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item middle">
+                        <h2 class="shopItem__title">Hoodie</h2>
+                        <a href="" class="shopItem__more"><img class="o-fluidimg" src="../assets/img/Mate_Star.svg" alt=""></a>
+                        <ul class="shopItem__sizes">
+                            <li class="shopItem__size">XS</li>
+                            <li class="shopItem__size">S</li>
+                            <li class="shopItem__size">M</li>
+                            <li class="shopItem__size">L</li>
+                            <li class="shopItem__size">XL</li>
+                        </ul>
+                    </div>
+                    <div class="shop__item"></div>
+                    <div class="shop__item"></div>
                 </div>
             </div>
         </div>
