--- a/src/assets/scss/page/shop.scss
+++ b/src/assets/scss/page/shop.scss
@@ -105,7 +105,7 @@
 
 @keyframes slideTest {
     0% {
-        transform: translate(0, 0);
+        transform: translateX(50vw);
     }
 
     1% {
@@ -119,7 +119,7 @@
 
 @keyframes slideTestInvert {
     0% {
-        transform: translate(0, 0);
+        transform: translateX(50vw);
     }
 
     1% {
@@ -277,7 +277,7 @@
 
     @keyframes slideTest {
         0% {
-            transform: translate(0, 0);
+            transform: translate(0, -33%);
         }
 
         1% {
@@ -291,7 +291,7 @@
 
     @keyframes slideTestInvert {
         0% {
-            transform: translate(0, 0);
+            transform: translate(0, -33%);
         }
 
         1% {
