--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -32,7 +32,7 @@ permalink: /index.html
     </div>
 
     <div class="s-section s-section__green">
-        <div class="s-section__number">
+        <div class="s-section__number number--small">
             <p>01</p>
         </div>
         <div class="s-section__content">
