--- a/src/assets/scss/base/_base-section.scss
+++ b/src/assets/scss/base/_base-section.scss
@@ -150,7 +150,7 @@
         grid-template-rows: repeat(7, 102px);
         grid-row-gap: 24px;
 
-        width: max-content;
+
 
     }
 
@@ -171,6 +171,12 @@
         margin-inline-end: -360px;
 
         
+    }
+
+    .number--small {
+
+        margin-inline-end: -560px;
+
     }
     
 }
