--- a/src/assets/scss/page/index.scss
+++ b/src/assets/scss/page/index.scss
@@ -480,7 +480,7 @@ LEARN MORE
 @media all and (min-width: 1024px) {
 
   .learnmore{
-    width: 635px;
+    min-width: 635px;
     height: auto;
 
     margin: 0 120px;
