Section Number sizes + OldNav mobile shop centering fix + mainnav active

--- a/src/assets/scss/base/_base-section.scss
+++ b/src/assets/scss/base/_base-section.scss
@@ -172,10 +172,16 @@
 
     .number--small {
 
-        margin-inline-end: -560px;
+        width: 80vh;
 
     }
     
+    .number--large {
+
+        width: 160vh;
+
+    }
+
 }
 
 .s-section__title {
