--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -124,7 +124,7 @@ permalink: /index.html
         </div>
     </div>
     <div class="s-section">
-        <div class="s-section__number">
+        <div class="s-section__number number--large">
             <p>04</p>
         </div>
         <div class="s-section__content">
