Typography Var usage

--- a/src/assets/scss/base/_base-section.scss
+++ b/src/assets/scss/base/_base-section.scss
@@ -186,7 +186,7 @@
 
 .s-section__title {
 
-    font-family: "Panchang";
+    font-family: var(--fontstack-alt);
     font-weight: 700;
     font-size: 42px;
 
@@ -204,7 +204,7 @@
 
     .s-section__title {
 
-        font-family: "Panchang";
+        font-family: var(--fontstack-alt);
         font-weight: 700;
         font-size: 25vh;
         text-align: left;
