body Green for full screen mobile

--- a/src/assets/scss/base/_base-body.scss
+++ b/src/assets/scss/base/_base-body.scss
@@ -1,7 +1,7 @@
 body {
 
   color: var(--color-green-300);
-  background-color: var(--color-grey-100);
+  background-color: var(--color-green-300);
 
   font-family: "DMSans";
   margin: 0;
